--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
       <div class="child-2">Child TWO</div>
       <div class="child-3">Child THREE</div>
     </div>
-
+    
     <a href="#">
       <div class="socials">Up</div>
     </a>
+
+    <script src="functions.js"></script>
   </body>
 </html>
