--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="test">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+      <h1>Talifhani Mulaudzi, Testing query selector</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam
         tenetur ducimus culpa earum harum fuga similique ut quasi in ab
@@ -129,12 +129,13 @@
       <div class="child-2">Child TWO</div>
       <div class="child-3">Child THREE</div>
     </div>
-    
+
     <a href="#">
       <div class="socials">Up</div>
     </a>
 
     <script src="functions.js"></script>
     <script src="objects.js"></script>
+    <script src="DOM.js"></script>
   </body>
 </html>
