--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
       <div class="socials">Up</div>
     </a>
 
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script>
     <script src="objects.js"></script>
-    <script src="DOM.js"></script>
+    <script src="DOM.js"></script> -->
+    <script src="Events.js"></script>
   </body>
 </html>
